# compose-for-agents

./: .dockerignore  .gitignore  AUDIO_WORKFLOW_PROCEDURE.md  CAPABILITIES.md  CLAUDE.md  CS_compose-for-agents_JG_gaia__250712.code-workspace  Dockerfile  GEMINI.md  MODES.md  PERSONAS.md  STORYCODE_AUDIO_QUICKSTART.md  StoryCode.md  StoryCode_AudioPipeline_Consolidation.md  StoryCode_Chronicles_VolumeII.md  StoryCode_Generation_Protocol.md  StoryCode_Speech_Optimization.md  StoryCode_VoiceSynthesis.md  StoryCode_VoiceSynthesis_Short.md  UNIFIED_AUDIO_WORKFLOW.md  VOLUME_II_CHRONICLES_LEDGER.md  _sample_voice_synt.sh  coding_scenarios.md  pyproject.toml  requirements.txt  test_simple.md
adk-mia-miette/: DESIGN.md
audio/: README.md
audio-pipeline-toolkit/: README.md  audio_prep_format_n_tags.py  mp3_tagger.sh  requirements.txt
crew-ai-mia-miette/: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
crew-ai-mia-miette/scripts/: quick_audio_setup.sh  storycode_to_mp3_refined.sh
crew-ai-mia-miette/src/audio_weaver/: crew.py  main.py  tools.py
crew-ai-mia-miette/src/audio_weaver/config/: agents.yaml  input.yaml  tasks.yaml
data/: GlyphMap.json  capabilities.json  modes.json  personas.json
mia/: Dockerfile  README.md  StoryCode.md  compose.yaml  pyproject.toml
mia/agents/: agent.py
miette/: Dockerfile  compose.yaml  pyproject.toml  run_miette.sh
miette/agents/: agent.py
miette/data/: Volume_I.md  narrative_output.md  session_transcript.txt
scripts/: create_chapter_series.sh  debug_voice_synthesis.sh  demo_complete.sh  quick_audio_setup.sh  (+6 more)
(+20 files in other folders)
